from __future__ import annotations
import random
from models.card import Card
from enums.suit import Suit
from enums.rank import Rank
from enums.variant import Variant


class Deck:
    NEW_DECK_ORDER_SUITS = [
        Suit.Spades,
        Suit.Diamonds,
        Suit.Clubs,
        Suit.Hearts,
    ]

    def __init__(
        self: Deck,
        cards: list[Card] = None,
        variant: Variant = Variant.NO_JOKERS,
    ) -> None:
        """
        Instantiates a new Deck and sets its cards
        """

        self.cards: list[Card] = (
            cards
            if cards is not None
            else self.get_new_deck_order_cards(variant)
        )

    def get_new_deck_order_cards(
        self: Deck, variant: Variant = Variant.NO_JOKERS
    ) -> list[Card]:
        """
        Returns a list of cards in typical new deck order (NDO).
        2 Jokers (if variant has jokers)
        Spades: Ace -> King
        Diamonds: Ace -> King
        Clubs: King -> Ace
        Hearts: King -> Ace
        # noqa: E501
        See https://en.wikipedia.org/wiki/Standard_52-card_deck#New-deck_order_(NDO)
        """

        ace_to_king = [Rank.Ace] + [
            rank for rank in Rank if rank not in (Rank.Ace, Rank.Joker)
        ]
        king_to_ace = ace_to_king[::-1]

        cards: list[Card] = [
            Card(suit, rank)
            for suit in self.NEW_DECK_ORDER_SUITS
            for rank in (
                ace_to_king
                if suit in self.NEW_DECK_ORDER_SUITS[:2]
                else king_to_ace
            )
        ]

        if variant is Variant.JOKERS_HIGHEST:
            cards = [
                Card(Suit.Wild, Rank.Joker),
                Card(Suit.Wild, Rank.Joker),
            ] + cards

        return cards

    def shuffle(self: Deck, cards: list[Card] = None) -> list[Card]:
        """
        Shuffles the cards of a deck based on the Fisher Yates algorithm
        """

        if cards is None:
            cards = self.cards

        for i in range(len(cards) - 1, 0, -1):
            j = random.randint(0, i)
            cards[i], cards[j] = cards[j], cards[i]

        return cards

    def deal(self: Deck, amount: int = 1) -> list[Card]:
        """
        Returns the last card from the deck list
        or the first card assuming the cards are on a face down pile.
        """

        dealt: list[Card] = self.cards[-amount:]
        self.cards = self.cards[:-amount]

        return dealt

    def __eq__(self: Deck, other: Deck) -> bool:
        """
        Checks whether a Deck is equal to another Deck
        """

        return isinstance(other, Deck) and self.cards == other.cards

    def __hash__(self: Deck) -> int:
        """
        Computes a hash of a Deck based on its cards
        """

        return hash(tuple(self.cards))

    def to_dict(self: Deck) -> dict:
        """
        Converts a Deck into a dictionary that can be stringified into json
        """

        return {"cards": [card.to_dict() for card in self.cards]}

    @classmethod
    def from_dict(cls: Deck, data: dict) -> Deck:
        """
        Creates and returns a Deck based on a json dictionary
        """

        return cls([Card.from_dict(card_data) for card_data in data["cards"]])
