from __future__ import annotations
from models.deck import Deck
from models.player import Player
from models.round import Round
from models.turn import Turn

from enums.variant import Variant
from enums.matchup import Matchup
from enums.dealmode import DealMode

import datetime
from prompt_toolkit.shortcuts import choice


class Game:
    def __init__(
        self: Game,
        players: list[Player] = None,
        variant: Variant = Variant.NO_JOKERS,
        deck: Deck = None,
        rounds: list[Round] = None,
        name: str = None,
    ) -> None:
        self.variant = variant
        self.deck = deck or Deck()
        self.players = players or []
        self.rounds = rounds or []
        self.name = name or Game._get_timestamp_name()

    def start(self: Game, taken_player_names: list[str]) -> None:
        """
        Starts the game
        """

        matchup_choice = choice(
            message="Choose a matchup:",
            options=[
                (Matchup.COMPUTER, "Player vs. Computer"),
                (Matchup.PLAYER, "Player vs. Player"),
            ],
            default=Matchup.COMPUTER,
        )

        self.variant = choice(
            message="Choose a game variant:",
            options=[
                (Variant.NO_JOKERS, "Standard 52 cards deck without jokers"),
                (
                    Variant.JOKERS_HIGHEST,
                    "Standard 52 cards deck with 2 jokers as high cards",
                ),
            ],
            default=Matchup.COMPUTER,
        )

        dealmode_choice = choice(
            message="Choose a dealmode:",
            options=[
                (DealMode.SEQUENTIAL, "Play round by round sequentially"),
                (
                    DealMode.INSTANT,
                    "Simulate all rounds to be played instantly",
                ),
            ],
            default=DealMode.SEQUENTIAL,
        )

        if matchup_choice is Matchup.COMPUTER:
            self.players = [
                Player(self._input_name(taken_player_names)),
                Player("Computer", True),
            ]
        elif matchup_choice is Matchup.PLAYER:
            player1 = Player(self._input_name(taken_player_names))
            player2 = Player(
                self._input_name(taken_player_names + [player1.name])
            )
            self.players = [player1, player2]

        self.deck = Deck(variant=self.variant)
        self.deck.shuffle()

        round_counter: int = 0
        while len(self.deck.cards) >= len(self.players):
            round_counter += 1
            print(f"\nRound {round_counter}:")
            self._play_round()

            if dealmode_choice is DealMode.SEQUENTIAL:
                keep_going = choice(
                    message="Continue to next round?",
                    options=[(True, "Yes"), (False, "No, quit")],
                    default=True,
                )
                if not keep_going:
                    break

        print()
        self.print_results()

    def _play_round(self: Game) -> None:
        current_round = Round()
        self.rounds.append(current_round)

        for player in self.players:
            dealt_card = self.deck.deal()[0]
            current_round.turns.append(Turn(player, dealt_card))
            print(f"{player.name}: {dealt_card}")

        winning_turns = current_round.get_winning_turns()

        if len(winning_turns) > 1:
            tie_names = ", ".join(
                f"{t.player} ({t.card})" for t in winning_turns
            )
            print(f"Tie between: {tie_names}")
            if len(self.deck.cards) >= 3 + len(self.players):
                self.deck.deal(3)
                print("⚔️ You are going to WAR (burned three cards)")
            else:
                print("️⚔️ Not enough cards left to go to WAR")
        elif len(winning_turns) == 1:
            winner = winning_turns[0]
            print(f"{winner.player} has the highest card ({winner.card})")

    def get_results(self: Game) -> dict[Player, int]:
        """
        Returns a dictionary of all players
        and their amount of won rounds
        """

        wins_per_player: dict[Player, int] = {}

        for round in self.rounds:
            winning_turns = round.get_winning_turns()
            if len(winning_turns) == 1:
                win = winning_turns[0]
                wins_per_player[win.player] = (
                    wins_per_player.get(win.player, 0) + 1
                )

        return wins_per_player

    def print_results(self: Game, results: dict[Player, int] = None) -> None:
        """
        Prints the result of the current game
        """

        results = results or self.get_results()

        if not results:
            print("No results to display")
            return

        max_score = max(results.values())
        winning_results = {k: v for k, v in results.items() if v == max_score}

        if len(winning_results) > 1:
            players_str = ", ".join(
                str(player) for player in winning_results.keys()
            )
            print(
                f"👔 It's a draw between: {players_str} with "
                f"{max_score} wins each."
            )
        else:

            print(
                f"🎉 {list(winning_results.items())[0][0]}"
                f" won {self.name} with a score of {max_score}"
            )

        for player, wins in results.items():
            print(f"{player} wins: {wins}")

        print()

    @classmethod
    def _input_name(cls: Game, taken_names: list[str]) -> str:
        while True:
            name = input("Enter your name: ").strip()
            if not name:
                print("Name cannot be empty")
            elif name in taken_names:
                print("Name already in use")
            else:
                return name

    @classmethod
    def _get_timestamp_name(cls: Game, prefix: str = "game") -> str:
        """
        Returns a name for a Game based on the current time.
        Format: <prefix>_YYYY-MM-DD-hh-mm-ss-ms
        """

        return f"{prefix}_{(datetime.datetime
                            .now(datetime.timezone.utc)
                            .strftime("%Y-%m-%d-%H-%M-%S-%f"))}"

    def __eq__(self: Game, other: Game) -> bool:
        """
        Checks whether a Game is equal to another Game.
        Games are considered equal if their
        players, rounds, deck and variant are equal.
        """

        return (
            isinstance(other, Game)
            and self.players == other.players
            and self.rounds == other.rounds
            and self.deck == other.deck
            and self.variant == other.variant
            and self.name == other.name
        )

    def __hash__(self: Game) -> int:
        """
        Returns a hash based on the game its players, rounds, deck and variant
        """

        return hash(
            (
                tuple(self.players),
                tuple(self.rounds),
                self.deck,
                self.variant,
                self.name,
            )
        )

    def to_dict(self: Game) -> dict:
        """
        Converts a Game into a dictionary that can be stringified into json
        """

        return {
            "players": [p.to_dict() for p in self.players],
            "rounds": [r.to_dict() for r in self.rounds],
            "deck": self.deck.to_dict(),
            "variant": self.variant.to_dict(),
            "name": self.name,
        }

    @classmethod
    def from_dict(cls: Game, data: dict) -> Game:
        """
        Returns a Game based on a json dictionary
        """

        return cls(
            [Player.from_dict(p) for p in data["players"]],
            Variant.from_dict(data["variant"]),
            Deck.from_dict(data["deck"]),
            [Round.from_dict(r) for r in data["rounds"]],
            data["name"],
        )
